--- a/Frontend/shopmobile/deploy_conf/nginx.conf
+++ b/Frontend/shopmobile/deploy_conf/nginx.conf
@@ -3,6 +3,12 @@ upstream backend{
 	server 172.26.5.42:8080;
 }
 
+#허용하지않은 도메인에서 접속할시 차단. 
+#server_name 이 매칭되지않을때 동작하는 기본 서버블록
+server{
+	return 404;
+}
+
 server {
     listen      80;
     listen  [::]:80;
