--- a/Frontend/shopmobile/deploy_conf/nginx.conf
+++ b/Frontend/shopmobile/deploy_conf/nginx.conf
@@ -6,6 +6,8 @@ upstream backend{
 #허용하지않은 도메인에서 접속할시 차단. 
 #server_name 이 매칭되지않을때 동작하는 기본 서버블록
 server{
+	listen 80 default_server;
+	listen  [::]:80;
 	return 404;
 }
 
