--- a/Frontend/shopmobile/deploy_conf/nginx.conf
+++ b/Frontend/shopmobile/deploy_conf/nginx.conf
@@ -7,7 +7,7 @@ upstream backend{
 #server_name 이 매칭되지않을때 동작하는 기본 서버블록
 server{
 	listen 80 default_server;
-	listen  [::]:80;
+	listen  [::]:80 default_server;
 	return 404;
 }
 
