--- a/Frontend/shopmobile/deploy_conf/nginx.conf
+++ b/Frontend/shopmobile/deploy_conf/nginx.conf
@@ -8,8 +8,19 @@ upstream backend{
 server{
 	listen 80 default_server;
 	listen  [::]:80 default_server;
+	server_name "";
 	return 404;
 }
+
+
+
+server {
+    listen      80;
+    listen  [::]:80;
+    server_name         i8e101.p.ssafy.io;
+    return 404;
+}
+
 
 server {
     listen      80;
