--- a/Frontend/shopmobile/deploy_conf/nginx.conf
+++ b/Frontend/shopmobile/deploy_conf/nginx.conf
@@ -5,22 +5,14 @@ upstream backend{
 
 #허용하지않은 도메인에서 접속할시 차단. 
 #server_name 이 매칭되지않을때 동작하는 기본 서버블록
-server{
-	listen 80 default_server;
-	listen  [::]:80 default_server;
-	server_name "";
-	return 404;
-}
-
-
-
 server {
-    listen      80;
-    listen  [::]:80;
-    server_name         i8e101.p.ssafy.io;
+    listen 80 default_server;
+    listen 443 ssl default_server;
+    server_name _;
+    ssl_certificate     /etc/cloudflare/hishop.pem;
+    ssl_certificate_key /etc/cloudflare/hishop.key;
     return 404;
 }
-
 
 server {
     listen      80;
