deploy config update

--- a/Frontend/shopmobile/deploy_conf/nginx.conf
+++ b/Frontend/shopmobile/deploy_conf/nginx.conf
@@ -46,11 +46,16 @@ server {
     }
 	
 	location /kiosk {
-    root /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri $uri/ /kiosk/index.html;
-}
-
+		root /usr/share/nginx/html;
+		index  index.html index.htm;
+		try_files $uri $uri/ /kiosk/index.html;
+	}
+	
+	location /admin {
+		root /usr/share/nginx/html;
+		index  index.html index.htm;
+		try_files $uri $uri/ /admin/index.html;
+	}
 
     #error_page  404              /404.html;
 
