--- a/Frontend/adminpage/package.json
+++ b/Frontend/adminpage/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.3.2",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "homepage": "/admin",
