--- a/Frontend/shopmobile/public/manifest.json
+++ b/Frontend/shopmobile/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Mobile App",
-  "name": "Create Mobile App Sample",
+  "name": "Hishopping",
   "icons": [
     {
       "src": "/app/images/logo.png",
