--- a/Frontend/kiosk/package.json
+++ b/Frontend/kiosk/package.json
@@ -7,7 +7,7 @@
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.4",
+    "@mui/material": "^5.11.8",
     "@mui/styled-engine-sc": "^5.11.0",
     "@mui/x-data-grid": "^5.17.19",
     "@testing-library/jest-dom": "^5.16.5",
@@ -21,9 +21,11 @@
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "^5.0.1",
+    "socket.io": "^4.6.0",
     "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.12.0"
   },
   "homepage": "/kiosk",
   "scripts": {
