--- a/Frontend/shopmobile/deploy_conf/nginx.conf
+++ b/Frontend/shopmobile/deploy_conf/nginx.conf
@@ -1,3 +1,5 @@
+limit_req_zone $binary_remote_addr zone=ddos_req:10m rate=5r/s;
+
 upstream backend{
 	ip_hash;
 	server 172.26.5.42:8080;
@@ -22,6 +24,9 @@ server {
 }
 
 server {
+	client_body_timeout 5s;
+    client_header_timeout 5s;
+	   
     listen       443 ssl;
 	listen  [::]:443 ssl;
     server_name         himart.shop;
@@ -30,14 +35,20 @@ server {
 
     access_log  /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
+	
+	if ($http_range ~ "d{9,}") {
+         return 444;
+     }
 
     location /app {
+		limit_req zone=ddos_req burst=20 nodelay;
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /app/index.html;
     }
 
 	location /api {
+		limit_req zone=ddos_req burst=20 nodelay;
         proxy_pass http://backend;
         proxy_redirect     off;
         proxy_set_header   Host $host;
@@ -46,12 +57,14 @@ server {
     }
 	
 	location /kiosk {
+		limit_req zone=ddos_req burst=20 nodelay;
 		root /usr/share/nginx/html;
 		index  index.html index.htm;
 		try_files $uri $uri/ /kiosk/index.html;
 	}
 	
 	location /admin {
+		limit_req zone=ddos_req burst=20 nodelay;
 		root /usr/share/nginx/html;
 		index  index.html index.htm;
 		try_files $uri $uri/ /admin/index.html;
