--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -44,6 +44,10 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+    defer-datasource-initialization: true
+#  sql:
+#    init:
+#      mode: always
 #  profiles:
 #    active:
 
