--- a/Frontend/kiosk/package.json
+++ b/Frontend/kiosk/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.3",
     "http-proxy-middleware": "^2.0.6",
+    "modern-react-qr-reader": "^1.0.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.11",
