--- a/Frontend/kiosk/package.json
+++ b/Frontend/kiosk/package.json
@@ -21,6 +21,7 @@
     "react-qr-code": "^2.0.11",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
+    "react-router-prompt": "^0.5.1",
     "react-scripts": "^5.0.1",
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.5.4",
