--- a/Frontend/shopmobile/deploy_conf/nginx.conf
+++ b/Frontend/shopmobile/deploy_conf/nginx.conf
@@ -24,6 +24,13 @@ server {
 }
 
 server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name i8e101.p.ssafy.io;
+    return 301 https://himart.shop$request_uri;
+}
+
+server {
 	client_body_timeout 5s;
     client_header_timeout 5s;
 	   
