--- a/Frontend/shopmobile/deploy_conf/nginx.conf
+++ b/Frontend/shopmobile/deploy_conf/nginx.conf
@@ -27,6 +27,8 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
     server_name i8e101.p.ssafy.io;
+	ssl_certificate     /etc/cloudflare/hishop.pem;
+    ssl_certificate_key /etc/cloudflare/hishop.key;
     return 301 https://himart.shop$request_uri;
 }
 
