--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
   
 
 # 배포용
-    url: jdbc:mysql://13.125.42.187:3306/hishop?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: ${HISHOP_DB_URL}
     username: ${HISHOP_DB_ID}
     password: ${HISHOP_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
